INCLUDES = -I$(top_srcdir)/libOSC -I$(includedir)
OSC_LIB_FILE = libOSC.la 
noinst_LTLIBRARIES = $(OSC_LIB_FILE)
libOSC_la_CFLAGS = $(AM_CFLAGS)
libOSC_la_SOURCES = OSC-address-space.c \
		 OSC-callbacklist.c \
		 OSC-drop.c \
		 OSC-pattern-match.c \
		 OSC-priority-queue.c \
		 OSC-receive.c \
		 OSC-string-help.c \
		 OSC-common.c \
		 OSC-timetag.c \
		 NetworkReturnAddress.c 

